--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,5 @@
 .cards {
-padding: 20px 0 40px;
+padding: 20px 20px 40px;
 border-bottom: 1px rgba(33,33,33,0.4) solid;
 }
 
@@ -15,6 +15,10 @@ justify-content: center;
 }
 
 @media screen and (max-width: 627px) {
+
+  .cards {
+  padding: 20px 20px 40px;
+  }
 
   .cards__list {
   grid-template-columns: repeat(auto-fit, 288px);
